--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Galerie d'Images</title>
+    <link rel="shortcut icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSCABPg4UbkODVQ2eMrkVobSCh3HVn2lqoiyw&usqp=CAU">
     <style>
         body {
             font-family: Arial, sans-serif;
