--- a/index.html
+++ b/index.html
@@ -60,6 +60,16 @@
         </div>
         <!-- Ajoutez autant d'images que vous le souhaitez en suivant la même structure -->
     </div>
+    <div id="physics-section">
+        <h2>Formule de Snell-Descartes</h2>
+        <p>La formule de Snell-Descartes décrit la réfraction de la lumière lorsqu'elle passe d'un milieu à un autre :</p>
+        <p>\[ n_1 \sin(\theta_1) = n_2 \sin(\theta_2) \]</p>
+        <p>Où :</p>
+        <ul>
+            <li>\( n_1 \) et \( n_2 \) sont les indices de réfraction des deux milieux respectifs.</li>
+            <li>\( \theta_1 \) et \( \theta_2 \) sont les angles d'incidence et de réfraction, respectivement.</li>
+        </ul>
+    </div>
 
     <script>
         // Si vous souhaitez ajouter une interaction JavaScript, vous pouvez le faire ici.
