--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
             transform: scale(1.1);
         }
     </style>
+    <script async src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+    <script id="MathJax-script" async src="https://polyfill.io/v3/\
+        provide@1.0.0/es6-promise@4.0.5/mathjax@3/es5/tex-chtml.js">
+    </script>
 </head>
 <body>
 
