--- a/index.html
+++ b/index.html
@@ -85,11 +85,11 @@
         }
 
         .image-container h3 {
-            position: absolute; /* Position absolue pour placer les titres en haut des images */
+            position: relative; /* Position absolue pour placer les titres en haut des images */
             top: 0; /* Position en haut par rapport à l'image */
             left: 0;
             right: 0;
-            margin: 0;
+            margin: 10px;
             font-size: 1.2em; /* Taille de police pour le titre en haut */
             font-weight: bold; /* Gras pour le titre en haut */
         }
@@ -113,7 +113,7 @@
             right: 0;
             margin: 0;
             font-style: italic;
-        }
+        {
     </style>
     <script async src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js">
