--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             right: 0;
             margin: 10px;
             font-size: 1.2em; /* Taille de police pour le titre en haut */
-            font-weight: italic; /* Gras pour le titre en haut */
+            font-style: italic; /* Gras pour le titre en haut */
         }
 
         .image-container img {
